[package]
name = "ssrs"
version = "0.1.0"
authors = ["reiyw <reiyw.setuve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.11.0"
anyhow = "1.0.30"
termion = "1.5.5"
cpal = "0.11.0"
walkdir = "2.3.1"
structopt = "0.3.14"
linked-hash-map = "0.5.3"
